--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-spring": "^8.0.27",
     "react-toastify": "^5.5.0",
     "reactotron-react-js": "^3.3.7",
     "redux": "^4.0.5",
